unpackaged/main/default/objects/Rep_Router__c/Rep_Router__c.object-meta.xml
<CustomObject>
    <description>Contains Address Information to route to a Sales Rep based on a determined address metric.</description>
    <label>Territory Rep Router</label>
    <nameField>
        <label>Rep Router Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Rep Routers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>