unpackaged/main/default/objects/Rep_Router__c/fields/Business_Entity__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity__c</fullName>
    <label>Business Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Line_of_Business</valueSetName>
    </valueSet>
</CustomField>