unpackaged/main/default/objects/Rep_Router__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contains the user</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rep_Router</relationshipName>
    <type>Lookup</type>
</CustomField>